Basic cleanup. Renamed mallets to either agent or opponent. Lint

--- a/notebooks/test-qlearner-model.ipynb
+++ b/notebooks/test-qlearner-model.ipynb
@@ -119,7 +119,7 @@
     "        self._env.update_state(action)\n",
     "        \n",
     "    def location(self):\n",
-    "        return self._env.left_mallet.x, self._env.left_mallet.y\n",
+    "        return self._env.agent.x, self._env.agent.y\n",
     "    \n",
     "    def env(self):\n",
     "        return self._env"
