--- a/analysis/c51_1_a2c_1.ipynb
+++ b/analysis/c51_1_a2c_1.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Showdown c51 v1 vs a2c v1"
+    "# Showdown c51 v1 vs a2c v1\n",
+    "#### Time: 5 hours\n",
+    "#### Capacity: 20 frames"
    ]
   },
   {
